# IntelligentGW_Gateway

./: ECU_ETH&UDP.c  Project_Relayserver.tar  l  last_commit_day_240401_120004  last_commit_day_240403_173200  last_commit_day_240404_185100  last_commit_day_240405_151100  last_commit_day_240406_140100  last_commit_day_240408_130300  last_commit_day_240409_100504  last_commit_day_240411_180102  last_commit_day_240415_142102  last_commit_day_240416_180101  last_commit_day_240417_142303  last_commit_day_240418_150104  last_commit_day_240423_162205  last_commit_day_240429_121800  last_commit_day_240430_130102  last_commit_day_240501_151203  last_commit_day_240502_125505  last_commit_day_240503_130100  last_commit_day_240504_160101  last_commit_day_240507_113805  last_commit_day_240508_151301  last_commit_day_240509_120701  last_commit_day_240513_170600  last_commit_day_240514_120000  last_commit_day_240517_155203  last_commit_day_240522_125902  last_commit_day_240523_152805  last_commit_day_240527_112901  last_commit_day_240528_151103  last_commit_day_240529_103400  last_commit_day_240530_114300  last_commit_day_240531_121302  last_commit_day_240603_145305  last_commit_day_240604_122901  last_commit_day_240607_140104  last_commit_day_240610_140203  last_commit_day_240612_180105  (+48 more)
ECU_COMMUNICATION_TEST/: MobileIP_Example_CN_02_eth0.pcap  ecu_udp_01.pcap
NUBO_20240813_sample/: test_server.py
PROTOBUF/: Avp.pb.cc  Avp.pb.h  Avp.proto
Project_Relayserver/: copy_data.bat  example.httpbody
Project_Relayserver/src/lib/relayserver/src/: librelayserver.c
Sample_data/log2/2024610_044658_000/: CAN_123eab0804567_2024610_044658_000.keti
Sample_data/log2/2024610_044728_000/: CAN_123eab0804567_2024610_044728_000.keti
Sample_data/log2/2024610_044746_000/: CAN_123eab0804567_2024610_044746_000.keti
Sample_data/log2/2024610_044756_000/: CAN_123eab0804567_2024610_044756_000.keti
Sample_data/log2/2024610_044759_000/: CAN_123eab0804567_2024610_044759_000.keti
Secure_OTA/: CMakeCache.txt  Makefile  cmake_install.cmake  copy_data.bat
Secure_OTA/output/include/: librelayserver.h
Secure_OTA/src/lib/protobuf/: CMakeLists.txt
Secure_OTA/src/lib/protobuf/src/: protobufabs.h
Secure_OTA/src/lib/relayserver/: CMakeLists.txt
TCPIP/example/: Http_Test.c  relay_test_app.c
TCPIP/lib/libmemoryallocation/: memory_allocation.c  memory_allocation_api.h  memory_allocation_param.h
TCPIP/src/: librelayserver.c
TCPIP_20230612_Ver.0.1/: Http_Test.c  job_task.c  librelayserver.c
TCPIP_20230616_Ver.0.2/: #define DEFALUT_HTTP_INFO_SIZE 512.c  CMakeLists.txt  config.c  copy_data.bat  relay_test_app.c  test.tar
TCPIP_20230616_Ver.0.2/lib/libmemoryallocation/: memory_allocation.c  memory_allocation_include.h  memory_allocation_param.h
TCPIP_20230616_Ver.0.2/src/app/relayserver_test/: CMakeLists.txt
TCPIP_20230616_Ver.0.2/src/app/relayserver_test/src/: relay_test_app.c
TCPIP_20230616_Ver.0.2/src/lib/memory_allocation/: CMakeLists.txt
TCPIP_20230616_Ver.0.2/src/lib/memory_allocation/src/: memory_allocation.c  memory_allocation_api.h
TCPIP_20230616_Ver.0.2/src/lib/relayserver/: CMakeLists.txt
TCPIP_20230616_Ver.0.2/src/lib/relayserver/src/: librelayserver.c  librelayserver.h
TCPIP_20231218/src/: librelayserver.h
TCPIP_20231226_v0/example/: Http_Test.c  relay_test_app.c
TCPIP_20231226_v0/src/: librelayserver.c  librelayserver.h
TCPIP_20240617_Ver.0.3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TCPIP_20240617_Ver.0.3/src/app/relayserver_test/: CMakeLists.txt
TCPIP_20240617_Ver.0.3/src/app/relayserver_test/src/: relay_test_app.c
TCPIP_20240617_Ver.0.3/src/lib/memory_allocation/: CMakeLists.txt
TCPIP_20240617_Ver.0.3/src/lib/relayserver/: CMakeLists.txt
TCPIP_20240617_Ver.0.3/src/lib/relayserver/src/: librelayserver.c  librelayserver.h
TCPIP_20240813_Ver.0.4/: copy_data.bat  log.txt
TCPIP_20240813_Ver.0.4/src/app/relayserver_test/src/: relay_test_app.c
TCPIP_20240813_Ver.0.4/src/lib/include/: librelayserver.h
TCPIP_20240813_Ver.0.4/src/lib/relayserver/src/: librelayserver.c  librelayserver.h
TCPIP_20240909_Ver.0.5/src/app/relayserver_test/src/: relay_test_app.c
TCPIP_20240909_Ver.0.5/src/lib/relayserver/src/: librelayserver.c  librelayserver.h
TCPIP_20240924_Ver.0.6/: copy_data.bat  hexdump.hex  null
TCPIP_20240924_Ver.0.6/output/include/: librelayserver.h
TCPIP_20240924_Ver.0.6/src/app/relayserver_test/src/: relay_test_app.c
TCPIP_20240924_Ver.0.6/src/app/test_app/: job_task.c
TCPIP_20240924_Ver.0.6/src/lib/include/: librelayserver.h
TCPIP_20240924_Ver.0.6/src/lib/protobuf/: CMakeLists.txt
TCPIP_20240924_Ver.0.6/src/lib/protobuf/src/: protobuf.proto  protobuf_wrapper.cpp  protobuf_wrapper.h
TCPIP_20241010_Ver.0.7/output/include/: librelayserver.h
TCPIP_20241010_Ver.0.7/src/app/relayserver_test/: relay_test_app
TCPIP_20241010_Ver.0.7/src/lib/include/: librelayserver.h
TCPIP_20241010_Ver.0.7/src/lib/protobuf/: CMakeLists.txt
TCPIP_20241010_Ver.0.7/src/lib/protobuf/src/: protobufabs.c
TCPIP_20241105_Ver.0.8/output/include/: memory_allocation_param.h
TCPIP_TEST/: #define HEADER_SIZE 8.c  Server.c  client  client.c
UDP_NUBO/: UDP_Client_(GW).c  UDP_Client_(GW).c.bak
last_commit_day_24_3_28_1147/: last_commit_day_24_3_28_1146
msg_authentication_ecu-master/2022-C2-AI-ComPression-main/: README.md
msg_authentication_ecu-master/2022-C2-AI-ComPression-main/AI_based_compression/: README.md  arithmeticcoding_fast.py  compare.sh  compress.sh  data_gen.py  decompress.sh  decompress_adaptive.py  models_torch.py  run.py  setup.sh  train_bootstrap.py
msg_authentication_ecu-master/2022-C2-AI-ComPression-main/Rule_based_compression/: PCD_COMPRESSION.sh  README.md  Voxelization_compression.py  docker_setup.sh  setup.sh
msg_authentication_ecu-master/2022-C2-AI-ComPression-main/Rule_based_compression/pcd_data/: 000000.pcd
(+8 files in other folders)
